--- a/backend/templates/accounts/cabinet.html
+++ b/backend/templates/accounts/cabinet.html
@@ -215,7 +215,7 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="d-flex align-items-center">
                                             {% for doctor in case_data.case.doctors.all|slice:":3" %}
-                                                <div class="avatar-circle me-1" title="{{ doctor.email }}">
+                                                <div class="avatar-circle me-1" title="{{ doctor.get_full_name }}">
                                                     {{ doctor.get_initials }}
                                                 </div>
                                             {% endfor %}
